src/commands/tests/snapshots/csx__commands__tests__sample_algorithm_indexer.snap
---
source: src/commands/tests/mod.rs
expression: "format!(\"{:#?}\", &metadata)"
---
[
    (
        "candid:service",
        "type Account = record { address : text };\ntype CycleManagement = record {\n  refueling_amount : nat;\n  initial_supply : nat;\n  refueling_threshold : nat;\n};\ntype CycleManagements = record {\n  db : CycleManagement;\n  vault_intial_supply : nat;\n  refueling_interval : nat64;\n  proxy : CycleManagement;\n  indexer : CycleManagement;\n};\ntype Env = variant { Production; Test; LocalDevelopment };\ntype IndexingConfig = record { start_from : nat64; chunk_size : opt nat64 };\ntype InitError = variant {\n  InvalidDestination : text;\n  InvalidPrincipal : principal;\n  InvalidContent : text;\n  InvalidRequest : text;\n};\ntype Result = variant { Ok; Err : InitError };\ntype Result_1 = variant { Ok; Err : text };\ntype SourceType = variant { evm; https; chainsight };\ntype Sources = record {\n  source : text;\n  interval_sec : opt nat32;\n  attributes : vec record { text; text };\n  source_type : SourceType;\n};\nservice : {\n  between_account : (record { nat64; nat64 }) -> (\n      vec record { nat64; Account },\n    ) query;\n  event_source : () -> (principal) query;\n  get_account : (nat64) -> (opt Account) query;\n  get_proxy : () -> (principal);\n  get_sources : () -> (vec Sources) query;\n  index : () -> ();\n  init_in : (Env, CycleManagements) -> (Result);\n  last_account : (nat64) -> (vec record { nat64; Account }) query;\n  proxy_between_account : (blob) -> (blob);\n  proxy_get_account : (blob) -> (blob);\n  proxy_last_account : (blob) -> (blob);\n  set_task : (nat32, nat32, bool) -> ();\n  setup : (text, IndexingConfig) -> (Result_1);\n}",
    ),
    (
        "chainsight:component_type",
        "algorithm_indexer",
    ),
    (
        "chainsight:description",
        "",
    ),
    (
        "chainsight:intervalSec",
        "3600",
    ),
    (
        "chainsight:label",
        "Sample Algorithm Indexer",
    ),
    (
        "chainsight:sources",
        "[{\"source_type\":\"chainsight\",\"source\":\"be2us-64aaa-aaaaa-qaabq-cai\",\"attributes\":{}}]",
    ),
    (
        "chainsight:tags",
        "[\"Ethereum\",\"Account\"]",
    ),
]
