src/commands/tests/snapshots/csx__commands__tests__sample_event_indexer-did.snap
---
source: src/commands/tests/mod.rs
expression: "fs::read_to_string(&did_path).unwrap()"
---
type CanisterMetricsSnapshot = record { cycles : nat; timestamp : nat64 };
type Env = variant { Production; Test; LocalDevelopment };
type HttpHeader = record { value : text; name : text };
type HttpResponse = record {
  status : nat;
  body : vec nat8;
  headers : vec HttpHeader;
};
type IndexingConfig = record { start_from : nat64; chunk_size : opt nat64 };
type InitError = variant {
  InvalidDestination : text;
  InvalidPrincipal : principal;
  InvalidContent : text;
  InvalidRequest : text;
};
type Result = variant { Ok; Err : InitError };
type Result_1 = variant { Ok; Err : text };
type SourceType = variant { evm; https; chainsight };
type Sources = record {
  source : text;
  interval_sec : opt nat32;
  attributes : Web3EventIndexerSourceAttrs;
  source_type : SourceType;
};
type Transfer = record { to : text; value : U256; from : text };
type TransformArgs = record { context : vec nat8; response : HttpResponse };
type U256 = record { value : text };
type Web3CtxParam = record {
  env : Env;
  url : text;
  from : opt text;
  chain_id : nat64;
};
type Web3EventIndexerSourceAttrs = record {
  chain_id : nat64;
  event_name : text;
};
service : {
  events_from_to : (nat64, nat64) -> (vec record { nat64; vec Transfer }) query;
  events_latest_n : (nat64) -> (vec record { nat64; vec Transfer }) query;
  get_ethereum_address : () -> (text);
  get_last_indexed : () -> (nat64) query;
  get_proxy : () -> (principal);
  get_sources : () -> (vec Sources) query;
  index : () -> ();
  init_in : (Env) -> (Result);
  metric : () -> (CanisterMetricsSnapshot) query;
  metrics : (nat64) -> (vec CanisterMetricsSnapshot) query;
  proxy_call : (vec nat8) -> (vec nat8);
  proxy_canister_metrics_snapshots_len : (vec nat8) -> (vec nat8);
  proxy_get_canister_metrics_snapshot : (vec nat8) -> (vec nat8);
  proxy_get_canister_metrics_snapshots : (vec nat8) -> (vec nat8);
  proxy_get_last_canister_metrics_snapshot : (vec nat8) -> (vec nat8);
  proxy_get_top_canister_metrics_snapshots : (vec nat8) -> (vec nat8);
  set_task : (nat32, nat32) -> ();
  setup : (text, Web3CtxParam, IndexingConfig) -> (Result_1);
  transform : (TransformArgs) -> (HttpResponse) query;
  transform_eip1559_support : (TransformArgs) -> (HttpResponse) query;
  transform_get_filter_changes : (TransformArgs) -> (HttpResponse) query;
  transform_send_transaction : (TransformArgs) -> (HttpResponse) query;
}
