src/commands/tests/snapshots/csx__commands__tests__sample_snapshot_indexer_evm.snap
---
source: src/commands/tests/mod.rs
expression: "format!(\"{:#?}\", &metadata)"
---
[
    (
        "candid:service",
        "type CycleManagement = record {\n  refueling_amount : nat;\n  initial_supply : nat;\n  refueling_threshold : nat;\n};\ntype CycleManagements = record {\n  db : CycleManagement;\n  vault_intial_supply : nat;\n  refueling_interval : nat64;\n  proxy : CycleManagement;\n  indexer : CycleManagement;\n};\ntype Env = variant { Production; Test; LocalDevelopment };\ntype HttpHeader = record { value : text; name : text };\ntype HttpResponse = record {\n  status : nat;\n  body : blob;\n  headers : vec HttpHeader;\n};\ntype InitError = variant {\n  InvalidDestination : text;\n  InvalidPrincipal : principal;\n  InvalidContent : text;\n  InvalidRequest : text;\n};\ntype Result = variant { Ok; Err : InitError };\ntype Result_1 = variant { Ok; Err : text };\ntype Snapshot = record { value : text; timestamp : nat64 };\ntype SourceType = variant { evm; https; chainsight };\ntype Sources = record {\n  source : text;\n  interval_sec : opt nat32;\n  attributes : Web3AlgorithmIndexerSourceAttrs;\n  source_type : SourceType;\n};\ntype TransformArgs = record { context : blob; response : HttpResponse };\ntype Web3AlgorithmIndexerSourceAttrs = record {\n  chain_id : nat64;\n  function_name : text;\n};\ntype Web3CtxParam = record {\n  env : Env;\n  url : text;\n  from : opt text;\n  chain_id : nat64;\n};\nservice : {\n  get_last_snapshot : () -> (Snapshot) query;\n  get_last_snapshot_value : () -> (text) query;\n  get_proxy : () -> (principal);\n  get_snapshot : (nat64) -> (Snapshot) query;\n  get_snapshot_value : (nat64) -> (text) query;\n  get_snapshots : () -> (vec Snapshot) query;\n  get_sources : () -> (vec Sources) query;\n  get_top_snapshot_values : (nat64) -> (vec text) query;\n  get_top_snapshots : (nat64) -> (vec Snapshot) query;\n  index : () -> ();\n  init_in : (Env, CycleManagements, opt principal) -> (Result);\n  proxy_get_last_snapshot : (blob) -> (blob);\n  proxy_get_last_snapshot_value : (blob) -> (blob);\n  proxy_get_snapshot : (blob) -> (blob);\n  proxy_get_snapshot_value : (blob) -> (blob);\n  proxy_get_snapshots : (blob) -> (blob);\n  proxy_get_top_snapshot_values : (blob) -> (blob);\n  proxy_get_top_snapshots : (blob) -> (blob);\n  proxy_snapshots_len : (blob) -> (blob);\n  set_task : (nat32, nat32, bool) -> ();\n  setup : (text, Web3CtxParam) -> (Result_1);\n  snapshots_len : () -> (nat64) query;\n  transform : (TransformArgs) -> (HttpResponse) query;\n  transform_eip1559_support : (TransformArgs) -> (HttpResponse) query;\n  transform_get_filter_changes : (TransformArgs) -> (HttpResponse) query;\n  transform_send_transaction : (TransformArgs) -> (HttpResponse) query;\n}",
    ),
    (
        "chainsight:component_type",
        "snapshot_indexer_evm",
    ),
    (
        "chainsight:description",
        "",
    ),
    (
        "chainsight:intervalSec",
        "3600",
    ),
    (
        "chainsight:label",
        "Sample Snapshot Indexer Evm",
    ),
    (
        "chainsight:sources",
        "[{\"source_type\":\"evm\",\"source\":\"6b175474e89094c44da98b954eedeac495271d0f\",\"attributes\":{\"function_name\":\"totalSupply\"}}]",
    ),
    (
        "chainsight:tags",
        "[\"ERC-20\",\"Ethereum\",\"DAI\"]",
    ),
]
